--- a/Project 2/level 4/level 4-2.html
+++ b/Project 2/level 4/level 4-2.html
@@ -20,133 +20,120 @@
       </div>
 
 <div id="a">
-    Happy
+    Happy as something unimportant
 </div>
 
 <div id="b">
-    AS
-</div>
-
-<div id="a">
-    something unimportant
-</div>
-
-<div id="c">
     and free as a thing unimportant
 </div>
 
-<div id="d">
-    AS
+<div id="c">
+    As something no one prizes
 </div>
 
-<div id="c">
-    something no one prizes
-    <br>
+<div id="d">
     and which does not prize itself
 </div>
 
-<div id="d">
-    As
-</div>
-
 <div id="e">
-    something mocked by all
-    and which mocks at their mockery
+    As something mocked by all
 </div>
 
 <div id="f">
-    As
+    HAPPY AS A DOG'S TAIL
 </div>
 
 <div id="g">
-    laughter without serious reason
+    and which mocks at their mockery
 </div>
 
 <div id="h">
-    As
+    As laughter without serious reason
 </div>
 
 <div id="i">
-    a yell able to outyell itself
+    As a yellable to outyell itself
 </div>
 
 <div id="j">
     Happy as no matter what
-    <br>
-    As any no matter what
 </div>
 
 <div id="k">
-    Happy
-    <br>
-    as a dog's tail
+    As any no matter what
 </div>
 
 
 <style>
+
+
 #a {
     position: relative;
-    padding: 5px;
-    top: 20px;
+    top: 300px;
+    left: 150px;
     font-style: lowercase;
-    font-family: arial black;
+    font-family: Palatino Linotype;
     width: 100%;
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
     display: inline-block;
+    transform: rotate(18deg)
 }
 
 #b {
     position: relative;
-    padding: 5px;
-    top: 20px;
+    right: 255px;
+    top: 300px;
     font-style: uppercase;
     font-family: Palatino Linotype;
     width: 100%;
-    font-size: 300px;
+    font-size: 30px;
     line-height: 70%;
     text-align: center;
     display: inline-block;
+    transform: rotate(89deg)
 }
 
 #c {
     position: relative;
-    padding: 5px;
-    top: 20px;
+    top: 200px;
+    right: 60px;
     font-style: uppercase;
-    font-family: arial black;
+    font-family: Palatino Linotype;
     width: 100%;
     font-size: 30px;
     line-height: 70%;
     text-align: right;
     display: inline-block;
+    transform: rotate(135deg)
 }
 
 #d {
     position: relative;
-    padding: 5px;
-    top: 20px;
+    bottom: 250px;
+    left: 30px;
     font-style: uppercase;
     font-family: Palatino Linotype;
-    letter-spacing: -5px;
     width: 100%;
-    font-size: 50px;
+    font-size: 20px;
     line-height: 50%;
     text-align: right;
     display: inline-block;
+    transform: rotate(45deg)
 }
 
 #e {
     position: relative;
-    padding: 5px;
-    top: 20px;
+    bottom: 300px;
+    right: 80px;
     font-style: uppercase;
-    font-family: arial black;
+    font-family: Palatino Linotype;
     width: 100%;
-    font-size: 200px;
+    font-size: 10px;
     line-height: 60%;
     text-align: right;
     display: inline-block;
+    transform: rotate(90deg)
 }
 
 #f {
@@ -156,30 +143,56 @@
     font-style: uppercase;
     font-family: Palatino Linotype;
     width: 100%;
-    font-size: 30px;
+    font-size: 110px;
     line-height: 500%;
     text-align: center;
     display: inline-block;
+
 }
 
 #g {
     position: relative;
-    padding: 5px;
-    top: 20px;
+    bottom: 300px;
     font-style: uppercase;
-    font-family: arial black;
+    font-family: Palatino Linotype;
     letter-spacing: 0px;
     width: 100%;
-    font-size: 50px;
+    font-size: 10px;
     line-height: -100%;
     text-align: center;
     display: inline-block;
+    transform: rotate(240deg)
 }
 
 #h {
     position: relative;
-    padding: 5px;
-    top: 20px;
+    font-style: uppercase;
+    font-family: Palatino Linotype;
+    width: 100%;
+    font-size: 10px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+    bottom: 350px;
+}
+
+#i {
+    position: relative;
+    left: 350px;
+    bottom: 800px;
+    font-style: uppercase;
+    font-family: Palatino Linotype;
+    width: 100%;
+    font-size: 10px;
+    line-height: -100%;
+    text-align: left;
+    display: inline-block;
+    transform: rotate(322deg)
+}
+
+#j {
+    position: relative;
+    bottom: 300px;
     font-style: uppercase;
     font-family: Palatino Linotype;
     width: 100%;
@@ -187,48 +200,22 @@
     line-height: -100%;
     text-align: left;
     display: inline-block;
-}
-
-#i {
-    position: relative;
-    padding: 5px;
-    top: 20px;
-    font-style: uppercase;
-    font-family: arial black;
-    letter-spacing: -3px;
-    width: 100%;
-    font-size: 60px;
-    line-height: -100%;
-    text-align: left;
-    display: inline-block;
-}
-
-#j {
-    position: relative;
-    padding: 5px;
-    top: 20px;
-    font-style: uppercase;
-    font-family: Palatino Linotype;
-    letter-spacing: -10px;
-    width: 100%;
-    font-size: 300px;
-    line-height: 70%;
-    text-align: center;
-    display: inline-block;
+    transform: rotate(190deg)
 }
 
 #k {
     position: relative;
     padding: 5px;
-    top: 20px;
+    left: 320px;
+    bottom: 700px;
     font-style: uppercase;
     font-family: Palatino Linotype;
-    letter-spacing: -2px;
     width: 100%;
-    font-size: 30px;
-    line-height: 70%;
-    text-align: right;
+    font-size: 10px;
+    line-height: -100%;
+    text-align: left;
     display: inline-block;
+    transform: rotate(318deg)
 }
 
 a:hover{
@@ -262,6 +249,5 @@ a:hover{
     text-align: right;
     bottom: 40px;
 }
-
 
 </html>
