--- a/Project 2/level 4/level 4-5.html
+++ b/Project 2/level 4/level 4-5.html
@@ -20,65 +20,58 @@
       </div>
 
 <div id="a">
-    Happy
+    Happy as something
 </div>
 
 <div id="b">
-    AS
-</div>
-
-<div id="a">
-    something unimportant
+    and free as a thing
 </div>
 
 <div id="c">
-    and free as a thing unimportant
+    UNIMPORTANT
 </div>
 
 <div id="d">
     AS
-</div>
-
-<div id="c">
-    something no one prizes
-    <br>
-    and which does not prize itself
-</div>
-
-<div id="d">
-    As
 </div>
 
 <div id="e">
-    something mocked by all
-    and which mocks at their mockery
+    something no one prizes and which does not prize itself
 </div>
 
 <div id="f">
-    As
+    something mocked by all and which mocks at their mockery
 </div>
 
 <div id="g">
-    laughter without serious reason
+    AS
 </div>
 
 <div id="h">
-    As
+    laughter without serious reason
 </div>
 
 <div id="i">
-    a yell able to outyell itself
+    a yell able to out yell itself
 </div>
 
 <div id="j">
-    Happy as no matter what
-    <br>
-    As any no matter what
+    happy as
 </div>
 
 <div id="k">
+    as any
+</div>
+
+<div id="l">
+    NO MATTER WHAT
+</div>
+
+<div id="m">
     Happy
-    <br>
+</div>
+
+<div id="n">
     as a dog's tail
 </div>
 
@@ -90,80 +83,76 @@
     top: 20px;
     font-style: uppercase;
     font-family: Georgia;
-    letter-spacing: -10px;
     width: 100%;
-    font-size: 300px;
+    font-size: 100px;
     line-height: 70%;
-    text-align: center;
+    text-align: left;
     display: inline-block;
 }
 
 #b {
     position: relative;
     padding: 5px;
-    top: 20px;
+    top: 50px;
     font-style: uppercase;
-    font-family: palatino linotype;
-    letter-spacing: -2px;
+    font-family: georgia;
     width: 100%;
-    font-size: 30px;
+    font-size: 100px;
     line-height: 70%;
-    text-align: right;
+    text-align: left;
     display: inline-block;
+
 }
 
 #c {
     position: relative;
     padding: 5px;
-    top: 20px;
+    top: -120px;
+    left: 950px;
     font-style: uppercase;
-    font-family: times;
-    letter-spacing: -2px;
+    font-family: georgia;
     width: 100%;
-    font-size: 30px;
+    font-size: 250px;
     line-height: 70%;
-    text-align: right;
+    text-align: left;
     display: inline-block;
 }
 
 #d {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 80px;
     font-style: uppercase;
-    font-family: arial;
-    letter-spacing: -10px;
+    font-family: georgia;
     width: 100%;
-    font-size: 300px;
+    font-size: 600px;
     line-height: 70%;
-    text-align: center;
+    text-align: left;
     display: inline-block;
 }
 
 #e {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 550px;
+    left: 800px;
     font-style: uppercase;
-    font-family: comic;
-    letter-spacing: -2px;
+    font-family: georgia;
     width: 100%;
-    font-size: 30px;
-    line-height: 70%;
-    text-align: right;
+    font-size: 100px;
+    text-align: left;
     display: inline-block;
 }
 
 #f {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 550px;
+    left: 800px;
     font-style: uppercase;
-    font-family: lucida;
-    letter-spacing: 10px;
+    font-family: georgia;
     width: 100%;
-    font-size: 30px;
-    line-height: -100%;
+    font-size: 100px;
     text-align: left;
     display: inline-block;
 }
@@ -171,27 +160,25 @@
 #g {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 480px;
     font-style: uppercase;
-    font-family: tahoma;
-    letter-spacing: 8px;
+    font-family: georgia;
     width: 100%;
-    font-size: 30px;
-    line-height: 500%;
-    text-align: center;
+    font-size: 600px;
+    line-height: 70%;
+    text-align: left;
     display: inline-block;
 }
 
 #h {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 900px;
+    left: 800px;
     font-style: uppercase;
-    font-family: verdana;
-    letter-spacing: 10px;
+    font-family: georgia;
     width: 100%;
-    font-size: 30px;
-    line-height: -100%;
+    font-size: 120px;
     text-align: left;
     display: inline-block;
 }
@@ -199,13 +186,12 @@
 #i {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 900px;
+    left: 800px;
     font-style: uppercase;
-    font-family: cursive;
-    letter-spacing: -3px;
+    font-family: georgia;
     width: 100%;
-    font-size: 60px;
-    line-height: -100%;
+    font-size: 120px;
     text-align: left;
     display: inline-block;
 }
@@ -213,12 +199,11 @@
 #j {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 900px;
     font-style: uppercase;
-    font-family: arial;
-    letter-spacing: 10px;
+    font-family: georgia;
     width: 100%;
-    font-size: 30px;
+    font-size: 250px;
     line-height: -100%;
     text-align: left;
     display: inline-block;
@@ -227,14 +212,53 @@
 #k {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 900px;
     font-style: uppercase;
-    font-family: cursive;
-    letter-spacing: -2px;
+    font-family: georgia;
     width: 100%;
-    font-size: 30px;
+    font-size: 250px;
     line-height: 70%;
-    text-align: right;
+    text-align: left;
+    display: inline-block;
+}
+
+#l {
+    position: relative;
+    padding: 5px;
+    bottom: 1300px;
+    left: 1200px;
+    font-style: uppercase;
+    font-family: georgia;
+    width: 100%;
+    font-size: 240px;
+    line-height: 70%;
+    text-align: left;
+    display: inline-block;
+}
+
+#m {
+    position: relative;
+    padding: 5px;
+    bottom: 800px;
+    font-style: uppercase;
+    font-family: georgia;
+    width: 100%;
+    font-size: 100px;
+    line-height: 70%;
+    text-align: left;
+    display: inline-block;
+}
+
+#n {
+    position: relative;
+    padding: 5px;
+    bottom: 800px;
+    font-style: uppercase;
+    font-family: georgia;
+    width: 100%;
+    font-size: 100px;
+    line-height: 70%;
+    text-align: left;
     display: inline-block;
 }
 
