--- a/Project 2/level 4/level 4-3.html
+++ b/Project 2/level 4/level 4-3.html
@@ -20,46 +20,46 @@
       </div>
 
 <div id="a">
-    Happy as something unimportant
+    HAPPY
 </div>
 
 <div id="b">
-    and free as a thing unimportant
-</div>
-
-<div id="a">
-    as something no one prizes
+    Happy as something unimportant
 </div>
 
 <div id="c">
-    and which does not prize itself
+    and free as a thing unimportant.
 </div>
 
 <div id="d">
-    as something mocked by all
-</div>
-
-<div id="c">
-    and which mocks at their mockery
-</div>
-
-<div id="d">
-    as laughter without serious reason 
+    As something no one prizes
 </div>
 
 <div id="e">
-    as a yell able to outyell itself
-    <br>
-    happy as no matter what
-    <br>
-    as any no matter what
+    and which does not prize itself.
 </div>
 
 <div id="f">
-    Happy
+    As something mocked by all
 </div>
 
-<div id="g">
+<div id="h">
+    As laughter without serious reason.
+</div>
+
+<div id="i">
+    As a yell able to outyell itself.
+</div>
+
+<div id="j">
+    Happy as no matter what,
+</div>
+
+<div id="k">
+    as any no matter what.
+</div>
+
+<div id="l">
     as a dog's tail
 </div>
 
@@ -69,40 +69,42 @@
 #a {
     position: relative;
     padding: 5px;
+    letter-spacing: 100px;
     top: 20px;
+    left: 30px;
     font-style: uppercase;
-    font-family: Palatino Linotype;
-    letter-spacing: -2px;
+    font-family: avenir;
     width: 100%;
-    font-size: 30px;
+    font-size: 800px;
     line-height: 70%;
-    text-align: right;
+    text-align: center;
     display: inline-block;
 }
 
 #b {
      position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 320px;
+    right: 600px;
     font-style: uppercase;
     font-family: Palatino Linotype;
-    letter-spacing: 0px;
     width: 100%;
-    font-size: 50px;
+    font-size: 40px;
     line-height: -100%;
     text-align: center;
     display: inline-block;
+    transform: rotate(270deg)
 }
 
 #c {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 410px;
+    right: 960px;
     font-style: uppercase;
     font-family: Palatino Linotype;
-    letter-spacing: -2px;
     width: 100%;
-    font-size: 30px;
+    font-size: 20px;
     line-height: 70%;
     text-align: right;
     display: inline-block;
@@ -111,86 +113,123 @@
 #d {
     position: relative;
     padding: 5px;
-    top: 20px;
+    right: 230px;
+    top: 40px;
     font-style: uppercase;
     font-family: Palatino Linotype;
-    letter-spacing: -5px;
     width: 100%;
-    font-size: 50px;
+    font-size: 20px;
     line-height: 50%;
     text-align: right;
     display: inline-block;
+    transform: rotate(270deg)
 }
 
 #e {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 850px;
+    right: 150px;
     font-style: uppercase;
     font-family: Palatino Linotype;
-    letter-spacing: -5px;
     width: 100%;
-    font-size: 200px;
+    font-size: 40px;
     line-height: 60%;
     text-align: right;
     display: inline-block;
+    transform: rotate(90deg)
 }
 
 #f {
      position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 400px;
+    left: 80px;
     font-style: uppercase;
     font-family: Palatino Linotype;
-    letter-spacing: 0px;
     width: 100%;
-    font-size: 50px;
+    font-size: 40px;
     line-height: -100%;
     text-align: center;
     display: inline-block;
-}
-
-#g {
-    position: relative;
-    padding: 5px;
-    top: 20px;
-    font-style: uppercase;
-    font-family: Palatino Linotype;
-    letter-spacing: 0px;
-    width: 100%;
-    font-size: 50px;
-    line-height: -100%;
-    text-align: center;
-    display: inline-block;
+    transform: rotate(295deg)
 }
 
 #h {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 150px;
+    left: 640px;
     font-style: uppercase;
     font-family: Palatino Linotype;
-    letter-spacing: 10px;
     width: 100%;
-    font-size: 30px;
+    font-size: 40px;
     line-height: -100%;
     text-align: left;
     display: inline-block;
+    transform: rotate(65deg)
 }
 
 #i {
     position: relative;
     padding: 5px;
-    top: 20px;
+    bottom: 550px;
+    left: 720px;
     font-style: uppercase;
     font-family: Palatino Linotype;
-    letter-spacing: -10px;
     width: 100%;
-    font-size: 300px;
+    font-size: 40px;
     line-height: 70%;
     text-align: center;
     display: inline-block;
+    transform: rotate(270deg)
 }
+
+#j {
+    position: relative;
+    padding: 5px;
+    bottom: 720px;
+    left: 810px;
+    font-style: uppercase;
+    font-family: Palatino Linotype;
+    width: 100%;
+    font-size: 20px;
+    line-height: 70%;
+    text-align: center;
+    display: inline-block;
+    transform: rotate(90deg)
+}
+
+#k {
+    position: relative;
+    padding: 5px;
+    bottom: 640px;
+    left: 1270px;
+    font-style: uppercase;
+    font-family: Palatino Linotype;
+    width: 100%;
+    font-size: 60px;
+    line-height: 70%;
+    text-align: center;
+    display: inline-block;
+    transform: rotate(270deg)
+}
+
+#l {
+    position: relative;
+    padding: 5px;
+    bottom: 840px;
+    left: 1370px;
+    font-style: uppercase;
+    font-family: Palatino Linotype;
+    width: 100%;
+    font-size: 20px;
+    line-height: 70%;
+    text-align: center;
+    display: inline-block;
+    transform: rotate(90deg)
+}
+
 
 a:hover{
   color: black;
