--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
     	<li><a href="http://barocio11.github.io/interactivemedia323/Exercise 1/">Exercise 1</a></li>
     	<li><a href="http://barocio11.github.io/interactivemedia323/Exercise 2/">Exercise 2a</a></li>
       <li><a href="http://barocio11.github.io/interactivemedia323/Exercise3/">Exercise 3</a></li>
+      <li><a href="http://barocio11.github.io/interactivemedia323/Exercise 4/">Exercise 4</a></li>
     </ul>
   </p>
 
-    <img src="IMG_0568.JPG" height="600" width="600">
+    <img src="IMG_0568.JPG" height="300" width="300">
 
   
 </body>
