--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
     	<li><a href="http://barocio11.github.io/interactivemedia323/Project 1/"> Project 1 </a></li>
       <li><a href="http://barocio11.github.io/interactivemedia323/Project 2/"> Project 2 </a></li>
+      <li><a href="http://barocio11.github.io/interactivemedia323/Project 3/"> Project 3 </a></li>
     </ul>
   </p>
   <p>
