--- a/Project 3/David Body/Body 3.html
+++ b/Project 3/David Body/Body 3.html
@@ -13,11 +13,13 @@
         <a href="">
         <img src="David Body.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Body/Body">
         <div class="writing">
         The enormous scale & height of David, is to send a message that:
         <br>
         Michael Angelo's sculpture had surpassed ancient Greece & Rome.
         </div>
+        </a>
         <div class="writing2">
     
         </div>
