--- a/Project 3/David Body/Body 7.html
+++ b/Project 3/David Body/Body 7.html
@@ -13,9 +13,11 @@
         <a href="">
         <img src="David Body.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Body/Body">
         <div class="writing">
         When David lines up ...he has every intention and every expectation of being able to hit Goliath at his most vulnerable spot between his eyes. David walks right up to Goliath (But still far enough away that Goliath's swords and javelin are useless) and kills Goliath with a single shot to the head.
         </div>
+        </a>
         <div class="writing2">
     
         </div>
