--- a/Project 3/David Chest/Chest 5.html
+++ b/Project 3/David Chest/Chest 5.html
@@ -13,9 +13,11 @@
         <a href="">
         <img src="David Chest.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest 6">
         <div class="writing">
         Why are David and Goliath fighting to begin with? Because the Philistines have proposed to send their toughest warrior against the Israelites' toughest warrior to settle a dispute in <i>"Single Combat."</i>
         </div>
+        </a>
         <div class="writing2">
 
         </div>
