--- a/Project 3/David Chest/Chest 6.html
+++ b/Project 3/David Chest/Chest 6.html
@@ -13,11 +13,13 @@
         <a href="">
         <img src="David Chest.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest 7">
         <div class="writing">
         As Gladwell stated in his <b>TED</b> talk:
         <br>
         <i>"the Philistines who is sent down, their mighty warrior, is a giant. ...He's outfitted head to toe in this glittering bronze armor, and he's got a sword and he's got a javelin and he's got his spear."</i>
         </div>
+        </a>
         <div class="writing2">
 
         </div>
