--- a/Project 3/David Chest/Chest 7.html
+++ b/Project 3/David Chest/Chest 7.html
@@ -13,9 +13,11 @@
         <a href="">
         <img src="David Chest.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest">
         <div class="writing">
         David is the only person willing to fight Goliath. He also refuses to wear armor. Why? Because David is also apparently the only person in the story who realizes that heavy armor weighs a warrior down.
         </div>
+        </a>
         <div class="writing2">
 
         </div>
