--- a/Project 3/David Chest/Chest.html
+++ b/Project 3/David Chest/Chest.html
@@ -10,15 +10,19 @@
 <body>
 
     <div class="canvas">
-        <a href="">
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Hand/Hand">
         <img src="David Chest.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest 2">
         <div class="writing">
         What you should know?
         </div>
+        </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest 4">
         <div class="writing2">
         What you never knew.
         </div>
+        </a>
     </div>
 
 </body>
