--- a/Project 3/David Hand/Hand 3.html
+++ b/Project 3/David Hand/Hand 3.html
@@ -13,6 +13,7 @@
         <a href="">
         <img src="David Hand.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Hand/Hand">
         <div class="writing">
         It exaggerates realism to prove a point his large and over developed right hand, its symbolic for 
         <br>
@@ -20,6 +21,7 @@
         <br>
         Because it was <b>GOD</b> who helped David slay the giant
         </div>
+        </a>
         <div class="writing2">
 
         </div>
