--- a/Project 3/David Head/Head 4.html
+++ b/Project 3/David Head/Head 4.html
@@ -13,6 +13,7 @@
         <a href="">
         <img src="David Head.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Head/Head">
         <div class="writing">
         The sculpture became a symbol of the republic of Florence in opposition to the note of <u>Tyranny</u>.
         </div>
@@ -23,6 +24,7 @@
         <br>
         Synonyms: despotism, absolutism, dictatorship.
         </div>
+        </a>
     </div>
 </body>
 
