--- a/Project 3/David Head/Head 5.html
+++ b/Project 3/David Head/Head 5.html
@@ -11,6 +11,7 @@
 
     <div class="canvas">
         <a href="">
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Head/Head 6">
         <img src="David Head.jpg">
         </a>
         <div class="writing">
@@ -19,6 +20,7 @@
         <div class="writing2">
         <i></i>
         </div>
+        </a>
     </div>
 </body>
 
