--- a/Project 3/David Head/Head 7.html
+++ b/Project 3/David Head/Head 7.html
@@ -13,12 +13,14 @@
         <a href="">
         <img src="David Head.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Head/Head 8">
         <div class="writing">
         In the biblical story, Goliath has to call out to David in order to fight him:
         </div>
         <div class="writing2">
         <i>"Come to me that I might feed your flesh to the birds of the heavens and the beast of the field."</i>
         </div>
+        </a>
     </div>
 </body>
 
