--- a/Project 3/David Neck/Neck 2.html
+++ b/Project 3/David Neck/Neck 2.html
@@ -13,9 +13,11 @@
         <a href="">
         <img src="David Neck.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Neck/Neck 3">
          <div class="writing">
         The Statue Inspires Florentein's to tackle their Goliath
         </div>
+        </a>
         <div class="writing2">
         
         </div>
