--- a/Project 3/David Neck/Neck 3.html
+++ b/Project 3/David Neck/Neck 3.html
@@ -13,9 +13,11 @@
         <a href="">
         <img src="David Neck.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Neck/Neck 4">
          <div class="writing">
         His head direction implies that he is turning his body to commence his battle with Goliath
         </div>
+        </a>
         <div class="writing2">
         
         </div>
