--- a/Project 3/David Neck/Neck.html
+++ b/Project 3/David Neck/Neck.html
@@ -10,9 +10,10 @@
 <body>
 
     <div class="canvas">
-        <a href="">
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest">
         <img src="David Neck.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Neck/Neck 2">
          <div class="writing">
         What you should know?
         </div>
