--- a/Project 3/David Body/Body 2.html
+++ b/Project 3/David Body/Body 2.html
@@ -13,9 +13,11 @@
         <a href="">
         <img src="David Body.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Body/Body 3">
         <div class="writing">
         The Structure of the body is an achievement in itself
         </div>
+        </a>
         <div class="writing2">
     
         </div>
