--- a/Project 3/David Body/Body 6.html
+++ b/Project 3/David Body/Body 6.html
@@ -13,11 +13,13 @@
         <a href="">
         <img src="David Body.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Body/Body 7">
         <div class="writing">
         As Gladwell stated in his <b>TED</b> talk:
         <br>
         <i>"If you do the calculations on the ballistics, on stopping power of the rock fired from David's sling, it's roughly equal to the stopping power of a [.45 caliber] handgun."</i>
         </div>
+        </a>
         <div class="writing2">
     
         </div>
