--- a/Project 3/David Chest/Chest 2.html
+++ b/Project 3/David Chest/Chest 2.html
@@ -13,9 +13,11 @@
         <a href="">
         <img src="David Chest.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest 3">
         <div class="writing">
         The Statues' perfect body continues the tradition of using <u>Idealization</u> in statues throughout history
         </div>
+        </a>
         <div class="writing2">
         
         </div>
