--- a/Project 3/David Chest/Chest 3.html
+++ b/Project 3/David Chest/Chest 3.html
@@ -16,11 +16,13 @@
         <div class="writing">
         The Statues' perfect body continues the tradition of using <u>Idealization</u> in statues throughout history
         </div>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest">
         <div class="writing2">
         <u>Idealization:</u>
         <br>
         Idealized is when there are no blemishes, flaws, or faults in something which is idealized
         </div>
+        </a>
     </div>
 
 </body>
@@ -49,6 +51,7 @@ img {
     font-family: georgia;
     color: grey;
     padding-left: 700px;
+    opacity: 0.2;
 
 }
 
