--- a/Project 3/David Chest/Chest 4.html
+++ b/Project 3/David Chest/Chest 4.html
@@ -13,9 +13,11 @@
         <a href="">
         <img src="David Chest.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest 5">
         <div class="writing">
         Goliath is Powerless
         </div>
+        </a>
         <div class="writing2">
 
         </div>
