--- a/Project 3/David Hand/Hand 2.html
+++ b/Project 3/David Hand/Hand 2.html
@@ -13,6 +13,7 @@
         <a href="">
         <img src="David Hand.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Hand/Hand 3">
         <div class="writing">
         The right hand tenses up, with the rock placed upon it.
         <br>
@@ -20,6 +21,7 @@
         <br>
         The Beginning of the Battle
         </div>
+        </a>
         <div class="writing2">
 
         </div>
