--- a/Project 3/David Hand/Hand.html
+++ b/Project 3/David Hand/Hand.html
@@ -10,12 +10,14 @@
 <body>
 
     <div class="canvas">
-        <a href="">
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Body/Body">
         <img src="David Hand.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Hand/Hand 2">
         <div class="writing">
         What you should know?
         </div>
+        </a>
         <div class="writing2">
 
         </div>
