--- a/Project 3/David Head/Head 3.html
+++ b/Project 3/David Head/Head 3.html
@@ -13,9 +13,11 @@
         <a href="">
         <img src="David Head.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Head/Head 4">
         <div class="writing">
         The sculpture became a symbol of the republic of Florence in opposition to the note of <u>Tyranny</u>.
         </div>
+        </a>
         <div class="writing2">
         <i></i>
         </div>
