--- a/Project 3/David Head/Head.html
+++ b/Project 3/David Head/Head.html
@@ -10,15 +10,19 @@
 <body>
 
     <div class="canvas">
-        <a href="">
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Neck/Neck">
         <img src="David Head.jpg">
         </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Head/Head 2">
         <div class="writing">
         What you should know?
         </div>
+        </a>
+        <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Head/Head 5">
         <div class="writing2">
         What you never knew.
         </div>
+        </a>
     </div>
 </body>
 
