--- a/Project 3/David Body/Body 2.html
+++ b/Project 3/David Body/Body 2.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Body/Body 3">
         <div class="writing">
-        The Structure of the body is an achievement in itself
+        The structure of the body is an achievement in itself
         </div>
         </a>
         <div class="writing2">
