--- a/Project 3/David Body/Body 3.html
+++ b/Project 3/David Body/Body 3.html
@@ -17,7 +17,7 @@
         <div class="writing">
         The enormous scale & height of David, is to send a message that:
         <br>
-        Michael Angelo's sculpture had surpassed ancient Greece & Rome.
+        Michaelangelo's sculpture had surpassed ancient Greece & Rome.
         </div>
         </a>
         <div class="writing2">
