--- a/Project 3/David Body/Body 5.html
+++ b/Project 3/David Body/Body 5.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Body/Body 6">
         <div class="writing">
-        A Misconception is the idea that David goes into battle with "only a sling." With modern ears, we might think of a child's toy sling shot. Instead he is carrying a sling, which a simple but effective weapon. Armies used it in battle, and shepards like David used it to protect their flocks from the wild animals.
+        A Misconception is the idea that David goes into battle with "only a sling." With modern ears, we might think of a child's toy sling shot. Instead he is carrying a sling, which is a simple but effective weapon. Armies used it in battle, and shepards like David used it to protect their flocks.
         </div>
         </a>
         <div class="writing2">
