--- a/Project 3/David Chest/Chest 2.html
+++ b/Project 3/David Chest/Chest 2.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest 3">
         <div class="writing">
-        The Statues' perfect body continues the tradition of using <u>Idealization</u> in statues throughout history
+        The statues' perfect body continues the tradition of using <u>Idealization</u> in statues throughout history
         </div>
         </a>
         <div class="writing2">
