--- a/Project 3/David Neck/Neck 5.html
+++ b/Project 3/David Neck/Neck 5.html
@@ -20,7 +20,7 @@
         <div class="writing2">
         <u>Realism:</u>
         <br>
-        A style of painting and sculpture developed about the mid-19th century in which figures and scenes are depicted as they are experienced or might be experienced in everyday life.
+        A style of painting and sculpture that developed around the mid-19th century, in which figures and scenes are depicted as they are experienced or might be experienced in everyday life.
         </div>
         </a>
     </div>
