--- a/Project 3/David Chest/Chest 7.html
+++ b/Project 3/David Chest/Chest 7.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Chest/Chest">
         <div class="writing">
-        David is the only person willing to fight Goliath. He also refuses to wear armor. Why? Because David is also apparently the only person in the story who realizes that heavy armor weighs a warrior down.
+        David is the only person willing to fight Goliath. He also refuses to wear armor. Why? Because David is apparently the only person in the story who realizes that heavy armor weighs a warrior down.
         </div>
         </a>
         <div class="writing2">
