--- a/Project 3/David Hand/Hand 3.html
+++ b/Project 3/David Hand/Hand 3.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Hand/Hand">
         <div class="writing">
-        It exaggerates realism to prove a point his large and over developed right hand, its symbolic for 
+        It exaggerates realism to prove a point, his large and over developed right hand is symbolic for 
         <br>
         <i>"The Hand of God"</i>
         <br>
