--- a/Project 3/David Head/Head 6.html
+++ b/Project 3/David Head/Head 6.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Head/Head 7">
         <div class="writing">
-        The Fact is that Goliath is a giant, a mighty 6-foot-9 Philistine warrior. Absolutely colossal even by modern standards, absolutely colossal in Biblical times. It turns out scientisthave debated for decades wether Goliath might have had a disorder called Acromegaly. This condition leads to a person growing extremely tall--but often leads to double-vision and severe nearsightedness.
+        The Fact is that Goliath is a giant, a mighty 6-foot-9 Philistine warrior. Absolutely colossal even by modern standards, absolutely colossal in Biblical times. It turns out scientist have debated for decades whether Goliath might have had a disorder called Acromegaly. This condition leads to a person growing extremely tall--but often leads to double-vision and severe nearsightedness.
         </div>
         <div class="writing2">
         <i></i>
