--- a/Project 3/David Head/Head 8.html
+++ b/Project 3/David Head/Head 8.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Head/Head">
         <div class="writing">
-        Why? Perhaps because he can't see him. Big competitors' percieved advantages can often mask their even bigger disadvantages.
+        Why? Perhaps because he can't see him. Big competitors' perceived advantages can often mask their even bigger disadvantages.
         </div>
         <div class="writing2">
         <i></i>
