--- a/Project 3/David Neck/Neck 2.html
+++ b/Project 3/David Neck/Neck 2.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Neck/Neck 3">
          <div class="writing">
-        The Statue Inspires Florentein's to tackle their Goliath
+        The statue inspires Florentein's to tackle their Goliath
         </div>
         </a>
         <div class="writing2">
