--- a/Project 3/David Neck/Neck 4.html
+++ b/Project 3/David Neck/Neck 4.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Neck/Neck 5">
          <div class="writing">
-        He embodies the perfect example of <u>Realism</u> merging the science of anatomy and art
+        He embodies the perfect example of <u>Realism</u>, merging the science of anatomy and art
         </div>
         </a>
         <div class="writing2">
