--- a/Project 3/David Head/Head 2.html
+++ b/Project 3/David Head/Head 2.html
@@ -15,7 +15,7 @@
         </a>
         <a href="http://barocio11.github.io/interactivemedia323/Project 3/David Head/Head 3">
         <div class="writing">
-        The Fierce Intensity within the eyes, speak as to say:
+        The fierce intensity within the eyes, speak as to say:
         </div>
         <div class="writing2">
         <i>David has seen his opponent Goliath, and is ready for battle</i>
